# VGE-projekt-2020

./: .gitignore  .gitmodules  CMakeLists.txt  NewtonsRings.cpp  README.md  Vge.cpp  input.csv  input2.csv
doc/: Prezentace.aux  Prezentace.nav  Prezentace.out  Prezentace.tex  Prezentace.toc  Projekt.aux  Projekt.tex  Projekt.toc  len.odg
include/: Arrangement.h  ArrangementTree.h  LevelTree.h  Nnr.h  OutputWindow.h  PointAlignment.h  VgeApp.h
shader/: alignmentFragment.glsl  alignmentVertex.glsl  allignmentFragment.glsl  frag.glsl  pointsFragment.glsl  pointsGeometry.glsl  pointsVertex.glsl  queryLineVertex.glsl  queryVertex.glsl  vert.glsl
src/: ArrangementTree.cpp  OutputWindow.cpp  VgeApp.cpp
